--- a/index.html
+++ b/index.html
@@ -4,9 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bootstrap Avançado</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+
+        <div id="carousel-exemplo" class="d-flex justify-content-center carousel slide" data-bs-ride="carousel"> 
+
+            <div class="carousel-inner bg-dark ">
+                <div class="carousel-item active">
+                    <img  class="d-block w-100 img-fluid" src="/img/flowers-g8b5f102e4_1920.jpg">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100 img-fluid"  src="img/architecture-gcc04dbafa_1920.jpg">
+                </div> 
+                <div class="carousel-item">
+                    <img class="d-block w-100 img-fluid"  src="img/girl-g664ae5764_1920.jpg">
+                </div>
+                <button data-bs-target="#carousel-exemplo" data-bs-slide="prev" class="carousel-control-prev" type="button">
+                    <span class="carousel-control-prev-icon"></span>
+                </button>
+                <button data-bs-target="#carousel-exemplo" data-bs-slide="next" class="carousel-control-next" type="button">
+                    <span class="carousel-control-next-icon"></span>
+                </button>
+            </div>
+        </div>
     
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./main.js"></script>
 </body>
 </html>
