--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="d-flex justify-content-center">
         <div id="conteiner2">
             <div class="row">
-                <div class="col-4">
+                <div class="col-lg-4 col-md-6 col-12" >
 
                     <div class="card">
                         <div class="card-header">Cabeçalho
@@ -54,7 +54,7 @@
                     </div>
                 </div>
 
-                <div class="col-4">
+                <div class="col-lg-4 col-md-6 col-12" >
 
                     <div class="card">
                         <div class="card-header">Cabeçalho
@@ -73,7 +73,7 @@
                     </div>
                 </div>
 
-                <div class="col-4">
+                <div class="col-lg-4 col-md-6 col-12" >
 
                     <div class="card">
                         <div class="card-header">Cabeçalho
